--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URI = "mongodb+srv://qtran31:thanhquan1@quanfcc.j8pft.mongodb.net/QuanFCC?retryWrites=true&w=majority"
+DB_URI = "mongodb+srv://qtran31:thanhquan1@quanfcc.j8pft.mongodb.net/quanfcc?retryWrites=true&w=majority"
